# pydpack

./: .gitignore  .history  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pydpack/: __init__.py  __main__.py
